--- a/concuPL.bib
+++ b/concuPL.bib
@@ -1425,6 +1425,69 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@inproceedings{tlll15,
+	author = {ter Beek, M. H. and Legay, A. and Lafuente, A. Lluch and Vandin, A.},
+	title = {Statistical Analysis of Probabilistic Models of Software Product Lines with Quantitative Constraints},
+	booktitle = {Proceedings of the 19th International Conference on Software Product Line},
+	series = {SPLC '15},
+	year = {2015},
+	isbn = {978-1-4503-3613-0},
+	location = {Nashville, Tennessee},
+	pages = {11--15},
+	numpages = {5},
+	url = {http://doi.acm.org/10.1145/2791060.2791087},
+	doi = {10.1145/2791060.2791087},
+	acmid = {2791087},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+} 
+
+@Inproceedings{tllv15,
+	author    = {ter Beek, Maurice H. and Legay, Axel and Lluch Lafuente, Alberto and Vandin, Andrea},
+	year      = {2015},
+	title     = {Quantitative Analysis of Probabilistic Models of Software Product Lines with Statistical Model Checking},
+	editor    = {Atlee, Joanne M. and Gnesi, Stefania},
+	booktitle = {{\rm Proceedings 6th Workshop on}
+	Formal Methods and Analysis in SPL Engineering,
+	{\rm London, UK, 11 April 2015}},
+	series    = {Electronic Proceedings in Theoretical Computer Science},
+	volume    = {182},
+	publisher = {Open Publishing Association},
+	pages     = {56-70},
+	doi       = {10.4204/EPTCS.182.5},
+}
+
+
+@article{chssgl13,
+	author    = {Maxime Cordy and
+	Patrick Heymans and
+	Pierre{-}Yves Schobbens and
+	Amir Molzam Sharifloo and
+	Carlo Ghezzi and
+	Axel Legay},
+	title     = {Verification for Reliable Product Lines},
+	journal   = {CoRR},
+	volume    = {abs/1311.1343},
+	year      = {2013},
+	url       = {http://arxiv.org/abs/1311.1343},
+	timestamp = {Tue, 03 Dec 2013 15:04:21 +0100},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/CordyHSSGL13},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+@Article{dpcslsh17,
+	author="Devroey, Xavier	and Perrouin, Gilles and Cordy, Maxime and Samih, Hamza	and Legay, Axel and Schobbens, Pierre-Yves and Heymans, Patrick",
+	title="Statistical prioritization for software product line testing: an experience report",
+	journal="Software {\&} Systems Modeling",
+	year="2017",
+	volume="16",
+	number="1",
+	pages="153--171",
+	issn="1619-1374",
+	doi="10.1007/s10270-015-0479-8",
+	url="http://dx.doi.org/10.1007/s10270-015-0479-8"
+}
 
 
 @article{BAETEN1995234,
@@ -1438,3 +1501,7 @@ issn = "0890-5401",
 doi = "http://dx.doi.org/10.1006/inco.1995.1135",
 author = "J.C.M. Baeten and J.A. Bergstra and S.A. Smolka",
 }
+
+
+
+
