--- a/syntax.tex
+++ b/syntax.tex
@@ -28,6 +28,7 @@ $$
 where $\feature{A} \in \calF$ and $p\in(0,1)$. The set of terms of the
 algebra will be denoted by  $\fodaPAp$.
 \edfn
+\mncomment{Por quÈ no se cuantifica el $P \paral Q$? El  resultado es que hay que poner un cutre $\frac12$ en la sem·ntica operacional que, adem·s, no se justifica}
 
 %\todo{Hay que explicar los operadores probabil√≠sticos $P \choice_{p}
 %       Q$ y $\ofeature{A};_{p} P$ y la raz√≥n por la que el resto no
