--- a/concu.bib
+++ b/concu.bib
@@ -2498,10 +2498,11 @@ pages="1--37",
 YEAR = "1997"}
 
 
-@inproceedings{ahm98,
+@inproceedings{ahk98,
 author="P.R. D'Argenio and H. Hermanns and J.-P. Katoen",
 title="On Generative Parallel Composition",
 booktitle="Workshop on Probabilistic Methods in Verification, PROBMIV'98, ENTCS 22",
+pages="30-54",
 publisher="Elsevier",
 year="1999"}
 
