--- a/syntax.tex
+++ b/syntax.tex
@@ -28,7 +28,7 @@ $$
 where $\feature{A} \in \calF$ and $p\in(0,1)$. The set of terms of the
 algebra will be denoted by  $\fodaPAp$.
 \edfn
-\mncomment{Por qué no se cuantifica el $P \paral Q$? El  resultado es que hay que poner un cutre $\frac12$ en la semántica operacional que, además, se justifica regular.}
+\mncomment{Por qué no se cuantifica el $P \paral Q$? El  resultado es que hay que poner un cutre $\frac12$ en la semántica operacional que, además, se justifica regular. Charlote añadido, incluyendo cita a D'Argenio que está en el PC.}
 
 %\todo{Hay que explicar los operadores probabilÃ­sticos $P \choice_{p}
 %       Q$ y $\ofeature{A};_{p} P$ y la razÃ³n por la que el resto no
