--- a/operational.tex
+++ b/operational.tex
@@ -133,8 +133,8 @@ where $n\geq 0$, $s=a_1a_2\cdots a_n$ and $p=p_1\cdot p_2\cdot \cdots p_{n}$.
 
 Let $P\in\fodaPAp$. We define the set of probabilistic products of $P$, denoted by $\prodp(P)$, as the set
 \begin{displaymath}
-$\{(pr,p)\ |\ $p>0$ \wedge $p=\sum\lbag q\ |\
-  P\vtranp{s\checkmark}{q} Q \y \product{s}=pr \rbag\}$
+\{(pr,p)\ |\ $p>0$ \wedge $p=\sum\lbag q\ |\
+  P\vtranp{s\checkmark}{q} Q \y \product{s}=pr \rbag\}
 \end{displaymath}
 \item We define the total probability of $P$, denote by $\ham(P)$, as \rbag p\ |\ \exists pr: (pr,p)\in\prodp(P)$. In addition, we define $\waste(P) = 1-\ham(P)$.
 \edfn
