--- a/operational.tex
+++ b/operational.tex
@@ -136,7 +136,7 @@ Let $P\in\fodaPAp$. We define the set of probabilistic products of $P$, denoted 
 \{(pr,p)\ |\ p>0 \wedge p=\sum\lbag q\ |\
   P\vtranp{s\checkmark}{q} Q \y \product{s}=pr \rbag\}
 \end{displaymath}
-\item We define the total probability of $P$, denote by $\ham(P)$, as \rbag p\ |\ \exists pr: (pr,p)\in\prodp(P)$. In addition, we define $\waste(P) = 1-\ham(P)$.
+\item We define the total probability of $P$, denoted by $\ham(P)$, as $\rbag p\ |\ \exists pr: (pr,p)\in\prodp(P)$. In addition, we define $\waste(P) = 1-\ham(P)$.
 \edfn
 
 
