--- a/syntax.tex
+++ b/syntax.tex
@@ -2,7 +2,7 @@
 \label{sec:stat:sintax}
 In this section we introduce our language. In addition to provide its syntax, we define an operational semantics and a denotational semantics. In the next section we will show the equivalence between these two semantic frameworks.
 
-\subsection{Syntax}
+\subsection{Syntax and operational semantics}
 \label{sec:stat:sintax}
 Following our previous work~\cite{acl13,cln16}, we will consider a
 set of features. We denote this set by $\calF$ and consider that $\feature{A}, \feature{B},
