--- a/operational.tex
+++ b/operational.tex
@@ -114,7 +114,7 @@ several ways, we consider that each derivation generates a
 different instance. In particular, we will later consider multisets of computations as well.
 %
 We will use the delimiters~$\lbag$ and~$\rbag$ to denote
-multisets.
+multisets.\mncomment{donde estan definidos $\lbag$ and~$\rbag$?? Por Dios, poned una notación standard, algo del estilo $\{ \!\!\!\:|\;$ y $\;| \!\!\!\:\}$}
 
 The following result, the proof is immediate, show that successful termination leads to $\nil$.
 \mncomment{Esto pa que sirve? Es obvio, no?}
