--- a/consistency.tex
+++ b/consistency.tex
@@ -12,7 +12,7 @@ Finally we prove an important property of our probabilistic language: its consis
      \begin{cases}
        \ofeature{A};\np(P) & \mathrm{if}\ P=\feature{A};_pP\\
        \np(P) \choice \np(Q) & \mathrm{if}\ P \choice_{p} Q \\
-       \mncomment{arreglar esto} P & \mathrm{otherwise}
+       \np(P) & \mathrm{esta mal!!! otherwise}
      \end{cases}
   \end{displaymath}
 \mncomment{la traducción estaba mal, muy mal, vamos, fatal. Hay que aplicar np a $P$ y $Q$, asi que el otherwise hay que poner todos los casos}
