--- a/consistency.tex
+++ b/consistency.tex
@@ -15,8 +15,8 @@ Finally we prove an important property of our probabilistic language: its consis
        \np(P) & \mathrm{esta mal!!! otherwise}
      \end{cases}
   \end{displaymath}
-\mncomment{la traducción estaba mal, muy mal, vamos, fatal. Hay que aplicar np a $P$ y $Q$, asi que el otherwise hay que poner todos los casos}
 \edfn
+\mncomment{la traduccion estaba mal, muy mal, vamos, fatal. Hay que aplicar np a $P$ y $Q$, asi que el otherwise hay que poner todos los casos}
 
 
 
