--- a/consistency.tex
+++ b/consistency.tex
@@ -3,6 +3,8 @@
 
 \mncomment{Comprobad que lo que digo en este parrafo es lo que queriais decir porque dais pocas pistas!}
 
+\mncomment{No veo la utilidad de esto pero a lo mejor lo haceis porque es tipico en SPL... ni idea... pero yo lo quitaba sin piedad...}
+
 Finally we prove an important property of our probabilistic language: its consistency. We say that a non-probabilistic SPL model is \emph{consistent} if it has products~\cite{acl13}.  In our case, we can define consistency by having $\ham(P)>0$. We will prove that a translation from our probabilistic framework into the non-probabilistic one keeps consistency in the expected way. 
 
 \bdfn
@@ -16,7 +18,7 @@ Finally we prove an important property of our probabilistic language: its consis
      \end{cases}
   \end{displaymath}
 \edfn
-\mncomment{la traduccion estaba mal, muy mal, vamos, fatal. Hay que aplicar np a $P$ y $Q$, asi que el otherwise hay que poner todos los casos}
+\mncomment{la traduccion esta mal, muy mal. Hay que aplicar np a $P$ y $Q$, asi que el otherwise hay que poner todos los casos}
 
 
 
