--- a/consistency.tex
+++ b/consistency.tex
@@ -5,7 +5,7 @@
 
 \mncomment{No veo la utilidad de esto pero a lo mejor lo haceis porque es tipico en SPL... ni idea... pero yo lo quitaba sin piedad...}
 
-Finally we prove an important property of our probabilistic language: its consistency. We say that a non-probabilistic SPL model is \emph{consistent} if it has products~\cite{acl13}.  In our case, we can define consistency by having $\ham(P)>0$. We will prove that a translation from our probabilistic framework into the non-probabilistic one keeps consistency in the expected way. 
+Finally we prove an important property of our probabilistic language: its consistency. We say that a non-probabilistic SPL model is \emph{consistent} if it has products~\cite{acl13}.  In our case, we can define consistency by having $\ham(P)>0$. We will prove that a translation from our probabilistic framework into the non-probabilistic one keeps consistency in the expected way.
 
 \bdfn
   We define the translation function $\np:\fodaPAp\mapsto \fodaPA$ as follows:
@@ -20,27 +20,17 @@ Finally we prove an important property of our probabilistic language: its consis
 \edfn
 \mncomment{la traduccion esta mal, muy mal. Hay que aplicar np a $P$ y $Q$, asi que el otherwise hay que poner todos los casos}
 
-
+The proof of the following result is straightforward by taking into account that our operational semantics rules are the same, if we discard probabilities, as in~\cite{acl13}. Therefore, any sequence of transitions
+derived in the probabilistic model can be also derived in the non probabilistic model. In addition, by Lemma~\ref{dfn:pr:sum} we know that any derived trace in the probabilistic model has a positive probability.
 
 \bprop\label{prop:relnonprob}
-  Let $P,Q\in\fodaPAp$,
-
-  \begin{enumerate}
-  \item\label{prop:relnonprob-a} $P\vtranp{s}{p}Q$ iff $\np(P)\vtran{s}\np(Q)$.
-  \item\label{prop:relnonprob-b} $pr\in\prod(\np(P))$ iff there is
+  Let $P,Q\in\fodaPAp$. We have 
+ $P\vtranp{s}{p}Q$ if and only if $\np(P)\vtran{s}\np(Q)$.
+  Moreover, we have $pr\in\prod(\np(P))$ if and only if there exists
     $p>0$ such that $(pr,p)\in\prodp(P)$.
   % \item\label{prop:relnonprob-c} $pr\in\semden{\np(P)}$ si y sólo si existe $p>0$ tal que $(pr,p)\in\semdenp{P}$.
   % \item\label{prop:relnonprob-d} Existe $p\in(0,1)$ tal que $(pr,p)\in\prodp(P)$ si y sólo si existe $q\in(0,1)$ tal que $(pr,q)\in\semdenp{P}$.
-  \end{enumerate}
-  \begin{proof}
-    The rules with probabilities in Figure~\ref{fig:sos-rules-p} are
-    the same in~\cite{acl13} but with probabilities. So any trace
-    derived in the probabilistic model can be derived in the non
-    probabilistic model. By Lemma~\ref{dfn:pr:sum} we know that any
-    derived trace in the probabilistic model has a non nul probability.
-  \end{proof}
-
-\eprop
+ \eprop
 
 % As a direct consequence of the previous result we have the following Corollary.
 % \bcor\label{cor:relnonprob}
