--- a/syntax.tex
+++ b/syntax.tex
@@ -30,6 +30,8 @@ algebra will be denoted by  $\fodaPAp$.
 \edfn
 \mncomment{Por que no se cuantifica el $P \paral Q$? El  resultado es que hay que poner un cutre $\frac12$ en la semantica operacional que, ademas, se justifica regular. Charlote anyadido, incluyendo cita a D'Argenio que esta en el PC.}
 
+\mncomment{Creo que $P \paral \nil$ no es equivalente a $P$. De hecho, $P \paral \nil$ es equivalente a $\nil$, no? Esto es lo que quereis que sea? Hay un problema similar con $P \choice_{p} \nil$.}
+
 %\todo{Hay que explicar los operadores probabilísticos $P \choice_{p}
 %       Q$ y $\ofeature{A};_{p} P$ y la razón por la que el resto no
 %       necesita probabilidades.}
