--- a/consistency.tex
+++ b/consistency.tex
@@ -21,7 +21,7 @@ Finally we prove an important property of our probabilistic language: its consis
 \mncomment{la traduccion esta mal, muy mal. Hay que aplicar np a $P$ y $Q$, asi que el otherwise hay que poner todos los casos}
 
 The proof of the following result is straightforward by taking into account that our operational semantics rules are the same, if we discard probabilities, as in~\cite{acl13}. Therefore, any sequence of transitions
-derived in the probabilistic model can be also derived in the non probabilistic model. In addition, by Lemma~\ref{dfn:pr:sum} we know that any derived trace in the probabilistic model has a positive probability.
+derived in the probabilistic model can be also derived in the non probabilistic model. In addition, by Lemma~\ref{dfn:pr:sum} \mncomment{Que lema es este?} we know that any derived trace in the probabilistic model has a positive probability.
 
 \bprop\label{prop:relnonprob}
   Let $P,Q\in\fodaPAp$. We have 
