--- a/denotational.tex
+++ b/denotational.tex
@@ -1,38 +1,39 @@
-\section{SemÃ¡ntica denotacional}
+\subsection{Denotational Semantics}
 \label{sec:stat:den}
+\mncomment{Comprobad que he interpretado bien lo que ponía en los itemizes originales}
 
-\begin{itemize}
-\item The model: products (set of features) with probability.
-\item Each product appears only onces
-\item The sum of all probabilities lies in $[0,1]$.
-\end{itemize}
-
+Next we define a denotational semantics for the terms of our language. The main features of the semantic domain are that we consider products (set of features) with probability, 
+each product appears one and the sum of all the probabilities associated with products belongs to the interval $[0,1]$. First, we precisely define the members of the semantic domain.
 
 %\todo{Explicar el modelo con mÃ¡s detalle,  y el motivo por el que se necesitan multiconjnutos}
 
+\mncomment{Me he bloqueado. Se quiere definir primero el dominio semantico, supongo. Asi que habria que definir $\calM$, creo. Luego, durante el resto de la seccion, en lugar de decir $M \subseteq \calP(\calF)\times [0,1]$ habria que decir $M\in \calM$, no? Supongo esto y continuo. Si he supuesto algo mal, corregidlo, please.}
+
 \bdfn\label{def:den:pr}
-  Let us consider the set $\calM\subseteq\calP(\calP(\calF)\times
-  (0,1]))$ defined as follows: $M\in\calM$ if the following
+We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\calP(\calF)\times
+  (0,1]))$ such that if $M\in\calM$ then the following
   conditions hold:
   \begin{itemize}
-  \item $M\subseteq \calP(\calF)\times (0,1]$ \\
-  \item $(P,q),(P,r)\in M$ entonces $q=r$ \\
-  \item $1\geq\sum_{(P,q)\in M} q$ \\
+  \item \mncomment{He quitado esta condición porque es redundante!}
+  %$M\subseteq \calP(\calF)\times (0,1]$
+  \item If $(P,q)\in M$ and $(P,r)\in M$ then $q=r$.
+  \item $0\leq \sum \lbag q \ | \ \exits P: \sum_{(P,q)\in M\rbag \leq 1$.
   \end{itemize}
+%\edfn
+
+%\begin{itemize}
+%\item The multisets in will appear in the operational semantics.
+%\item We need to convert these multisets into sets of the model. It is
+%  possible if the conditions of Proposition~\ref{prop:pr:accum} hold.
+%\end{itemize}
+
+%\bdfn
+Let $M \in \cal$. \mncomment{Pone que es un multiset???!!!! Si es un objeto semántico, es un set, no??} 
+We define the operator $\accum$ as follows:
+  $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q\ ,\ p>0\right \right\}$$
 \edfn
 
-\begin{itemize}
-\item The multisets in will appear in the operational semantics.
-\item We need to convert these multisets into sets of the model. It is
-  possible if the conditions of Proposition~\ref{prop:pr:accum} hold.
-\end{itemize}
 
-\bdfn
-  Let $M \subseteq \calP(\calF)\times [0,1]$ a multi set then we
-  define the operator $\accum$ as follows:
-  $$\accum(M) = \left\{(P,p)\ | \ p=\sum_{(P,q)\in M}q\ ,\ p>0\right\}$$
-
-\edfn
 \bprop\label{prop:pr:accum}
  Let $M\subseteq \calP(\calF)\times [0,1]$ be a multiset, if $1\geq\sum_{(P,q)\in M} q$
  then $\accum(M)\in\calM$.
@@ -47,38 +48,38 @@
 \bdfn\label{def:semantic:operators}
 
   \begin{itemize}\mbox{ }
-        
+
   \item $\semdenp{\nil}=\emptyset$
-  
+
   \item $\semdenp{\checkmark}=\{(\emptyset,1)\}$
-   
-  \item 
-    $\semdenp{\feature{A};\cdot}(M)= 
+
+  \item
+    $\semdenp{\feature{A};\cdot}(M)=
       \accum\bigl(\lbag(\{\feature{A}\}\cup P,p)\ |\ (P,p)\in M\rbag\bigr)
       % \accum\bigl(
       %    \{ (\{\feature{A}\} \cup P,p ) |\   (P,p) \in M\}\bigr)
          $
-  
-  \item 
+
+  \item
     $\semdenp{\ofeature{A};_{r}\cdot}(M)=
                 \accum\bigl(\lbag(\emptyset , 1-r )\rbag\uplus\lbag (\{\feature{A}\}\cup P, r\cdot p ) \ |\ (P,p) \in M\rbag\bigr)$
 
-  \item 
+  \item
     $\semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})=\accum\bigl(\lbag(P,r\cdot p  ) \ |\ (P,p) \in
     M_{1}\rbag \uplus \lbag(Q, (1-r)\cdot q  ) \ |\ (Q,q) \in M_{2}\rbag\bigr) $
-  \item 
+  \item
     $
         \semdenp{\cdot\paral\cdot}(M_{1},M_{2})= \accum\Bigl(
                 \lbag (P\cup Q, p\cdot q)  |\ (P,p) \in M_{1},\ (Q,q) \in M_{2}\rbag\Bigr)
     $
-    
-  \item  
+
+  \item
     $\semdenp{\require{A}{B}{\cdot}}(M)=\accum\left(\begin{array}{l}
       \lbag\bigl(P,p\bigr)\ |\  (P,p)\in M, \feature{A}\not\in P\rbag\ \uplus\\
-      \lbag\bigl(\{\feature{B}\}\cup P ,p\bigr)\ |\ (P,p)\in M, \feature{A}\in P\rbag \\ 
+      \lbag\bigl(\{\feature{B}\}\cup P ,p\bigr)\ |\ (P,p)\in M, \feature{A}\in P\rbag \\
       \end{array}\right)$
 
-  \item  
+  \item
     $\semdenp{\exclude{A}{B}{\cdot}}(M)=\begin{array}[t]{l}
       \{(P,p)\ |\ (P,p)\in M, \feature{A}\not\in P\}\cup\\
       \{(P,p)\ |\ (P,p)\in M, \feature{B}\not\in P\}
@@ -86,7 +87,7 @@
 
     \item $\semdenp{\mandatory{A}{\cdot}}(M) = \semdenp{\feature{A};{\cdot}}(M)$
 
-    \item 
+    \item
       $\semdenp{\forbid{A}{\cdot}}(M) = \{(P,p)\ |\ (P, p) \in M, \feature{A}\not\in P      \}$
 
   \end{itemize}
@@ -125,8 +126,8 @@
 
 
 
-%%% Local Variables: 
+%%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
 %%% ispell-local-dictionary: "english"
-%%% End: 
+%%% End:
