--- a/denotational.tex
+++ b/denotational.tex
@@ -14,10 +14,10 @@ We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\c
   (0,1]))$ such that if $M\in\calM$ then the following
   conditions hold:
   \begin{itemize}
-  \item \mncomment{He quitado esta condición porque es redundante!}
+  \item \mncomment{He quitado esta condicion porque es redundante.}
   %$M\subseteq \calP(\calF)\times (0,1]$
   \item If $(P,q)\in M$ and $(P,r)\in M$ then $q=r$.
-  \item $0\leq \sum \lbag q \ | \ \exits P: \sum_{(P,q)\in M\rbag \leq 1$.
+  \item $0\leq \sum \lbag q \ | \ \exists P: \sum_{(P,q)\in M\rbag \leq 1$.
   \end{itemize}
 %\edfn
 
@@ -28,9 +28,9 @@ We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\c
 %\end{itemize}
 
 %\bdfn
-Let $M \in \cal$. \mncomment{Pone que es un multiset???!!!! Si es un objeto semántico, es un set, no??} 
+Let $M \in \cal$. \mncomment{Pone que es un multiset???!!!! Si es un objeto semantico, es un set, no??} 
 We define the operator $\accum$ as follows:
-  $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q\ ,\ p>0\right \right\}$$
+  $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q\ ,\ p>0\right. \right\}$$
 \edfn
 
 
