--- a/denotational.tex
+++ b/denotational.tex
@@ -28,9 +28,9 @@ We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\c
 %\end{itemize}
 
 %\bdfn
-Let $M \in \cal$. \mncomment{Pone que es un multiset???!!!! Si es un objeto semantico, es un set, no??} 
+Let $M \in \cal$. \mncomment{Pone que es un multiset. Si es un objeto semantico, es un set, no??} 
 We define the operator $\accum$ as follows:
-  $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q\ ,\ p>0\right. \right\}$$
+  $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q \wedge p>0\right. \right\}$$
 \edfn
 
 
