--- a/denotational.tex
+++ b/denotational.tex
@@ -17,7 +17,7 @@ We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\c
   \item \mncomment{He quitado esta condicion porque es redundante.}
   %$M\subseteq \calP(\calF)\times (0,1]$
   \item If $(P,q)\in M$ and $(P,r)\in M$ then $q=r$.
-  \item $0\leq \sum \lbag q \ | \ \exists P: \sum_{(P,q)\in M\rbag \leq 1$.
+  \item $0\leq \sum \lbag q \ | \ \exists P: (P,q)\in M\rbag \leq 1$.
   \end{itemize}
 %\edfn
 
