--- a/denotational.tex
+++ b/denotational.tex
@@ -1,8 +1,8 @@
 \subsection{Denotational Semantics}
 \label{sec:stat:den}
-\mncomment{Comprobad que he interpretado bien lo que ponía en los itemizes originales}
+\mncomment{Comprobad que he interpretado bien lo que ponia en los itemizes originales}
 
-Next we define a denotational semantics for the terms of our language. The main features of the semantic domain are that we consider products (set of features) with probability, 
+Next we define a denotational semantics for the terms of our language. The main features of the semantic domain are that we consider products (set of features) with probability,
 each product appears one and the sum of all the probabilities associated with products belongs to the interval $[0,1]$. First, we precisely define the members of the semantic domain.
 
 %\todo{Explicar el modelo con mÃ¡s detalle,  y el motivo por el que se necesitan multiconjnutos}
@@ -28,7 +28,7 @@ We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\c
 %\end{itemize}
 
 %\bdfn
-Let $M \in \cal$. \mncomment{Pone que es un multiset. Si es un objeto semantico, es un set, no??} 
+Let $M \in \cal$. \mncomment{Pone que es un multiset. Si es un objeto semantico, es un set, no??}
 We define the operator $\accum$ as follows:
   $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q \wedge p>0\right. \right\}$$
 \edfn
