--- a/denotational.tex
+++ b/denotational.tex
@@ -28,14 +28,18 @@ We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\c
 %\end{itemize}
 
 %\bdfn
-Let $M \in \cal$. \mncomment{Pone que es un multiset. Si es un objeto semantico, es un set, no??}
+Let $M \in \calM$. \mncomment{Ponia que es un multiset. Si es un objeto semantico, es un set, no??}
 We define the operator $\accum$ as follows:
   $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q \wedge p>0\right. \right\}$$
 \edfn
 
+The following result is immediate.
+\mncomment{Creo que lo he entendido! Poneis los $M$ que sean multiconjuntos para sumar todas las probabilidades y asociarselas al P!! QUe mal contado esta.... Luis, haz una iteracion y luego sigo.}
 
 \bprop\label{prop:pr:accum}
- Let $M\subseteq \calP(\calF)\times [0,1]$ be a multiset, if $1\geq\sum_{(P,q)\in M} q$
+ Let $M\subseteq \in \calM$. \mncomment{otra vez lo de multiset. Puede que yo no haya entendido algo? Pero vamos, si es un multiset, no tiene sentido que ponga $M\subseteq \calP(\calF) \times [0,1]$.}
+ %be a multiset, 
+ If $1\geq\sum_{(P,q)\in M} q$
  then $\accum(M)\in\calM$.
 \eprop
 
